3 January 2008
+ Day view doesn't allow you to add an event until you create a
  schedule.
+ Deleting the public calendar resets if the default.

Version 1.6.1
----------------------------------------------------------------
13 December 2007
+ Fixed call to absent function in Event.php

Version 1.6.0
----------------------------------------------------------------
3 December 2007
+ Month grid view can be set to show events
+ Calendar events can be posted in the blog
+ Paragraph tag around day message
+ Fixed comment in event tpl preventing bar from disappearing in user
  mode
+ Removed extra message tag from month list view.
+ Updated:
- templates/style.css
- templates/admin/forms/blog.tpl
- templates/admin/settings.tpl
- templates/view/day.tpl
- templates/view/event.tpl
- templates/view/month/grid.tpl
- templates/view/month/list.tpl


15 October 2007
+ Applied patch #1813081 from aDarkling

Version 1.5.3
----------------------------------------------------------------
18 September 2007
+ Fixed bug with js_calendar date selection.

Version 1.5.2
-----------------------------------------------------------------
22 August 2007
+ removed calendar colors that matched default theme.

Version 1.5.1
-----------------------------------------------------------------
27 July 2007
+ increased popup size for schedule


11 June 2007
+ New version fixes import oversite in install.sql. Missing column.

4 June 2007
+ Added define to prevent day month year on same day events
+ Add event links put in view templates.
+ Updated files : conf/config.php, templates/view/month/list.tpl,
  templates/view/day.tpl, templates/view/week.tpl

22 May 2007
+ Changed the default hour format to "I" (eye) from l (ell) in
  config.php. Some php configurations do not recognize it.
+ Updated files: conf/config.php

Version 1.5.0
-----------------------------------------------------------------
24 April 2007
+ Added day listing to upcoming events list.
+ Some other small edits.