@@ -56,4 +56,9 @@ define('CALENDAR_TOTAL_SUGGESTIONS', 5);
 // If true, events with single day start and end times will
 // show the month, day, or year
 define('CALENDAR_SAME_DAY_MDY', true);
+
+/**
+ * Date format for upcoming events window
+ */
+define('CALENDAR_UPCOMING_FORMAT', '%A, %e %b');
 ?>
