@@ -1,3 +1,7 @@
+29 January 2008
++ Added a upcoming date format
++ Updated: conf/config.php
+
 3 January 2008
 + Day view doesn't allow you to add an event until you create a
   schedule.
